# TCPClient

./: CMakeLists.txt  README.md  header.h  main.c
src/: CMakeLists.txt  connection_handling.c  connection_handling.h  defines.h  main.c  parsers.c  parsers.h
src/commands/: CMakeLists.txt  commands.h  get.c  put.c  replace.c
src/semaphores/: flags.c  flags.h
